# todo_rust

./: Cargo.toml  LICENSE  README.md
data/: todos.csv
src/: app.rs  main.rs  model.rs  storage.rs  todos.csv  ui.rs
