[package]
name = "todo_rust"
version = "0.1.0"
edition = "2024"
description = "Todo app"
licence = "MIT"
authors = ["Evgeniy Nekrasov <enshetinin@gmail.com>"]

[dependencies]
csv = "1.4.0"
serde = { version = "1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.2"
unicode-width = "0.2.2"
